[package]
name = "jp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
strsim = "0.10.0"
walkdir = "2.3.3"
winreg = "0.11.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = {version = "1.0.95"}
dirs = "5.0.0"
dirs-next = "2.0.0"